--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							
 								<h2 class="alt">Hi! I'm <strong>Rahul Balu</strong><a href=></a> <br />
 							    <a href=></a></h2>
-								<p>A cybersecurity student with a passion for technology and a drive to contribute to the protection of digital assets, Currently I am pursuing Certified Ethical Hacker<br />
+								<p>Cybersecurity student with a passion for technology and a drive to contribute to the protection of digital assets, Currently I am pursuing Certified Ethical Hacker<br />
 							        </p>
 							</header>
 
