--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
                             <img src="images/Cyber-Security2.jpg" alt="" style="width:100%;">
+							<style>
+								body {
+									background-image:
+									url(img_black.jpg');
+								}
+							</style>
 							<header>
 							
 								<h2 class="alt">Hi! I'm <strong>Rahul Balu</strong><a href=></a> <br />
