--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2 class="alt1">About Me</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/Upgrade.jpg" alt="" /></a>
