--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 							<a href="#" class="image featured"><img src="images/Upgrade.jpg" alt="" /></a>
 
-							<p>Strong problem-solving abilities with a keen eye 
+							<p class="alt2">Strong problem-solving abilities with a keen eye 
 								for detail. Excellent communication skills and a quick learner, with a passion for staying updated with the 
 								latest industry trends and technologies</p>
 
