--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
 						<div class="container">
                             <img src="images/Cyber-Security2.jpg" alt="" style="width:100%;">
 							<header>
-							
+							        <h3 class="al">Welcome to My Cybersecurity Corner</h3>
+								
 								<h2 class="alt">Hi! I'm <strong>Rahul Balu</strong><a href=></a> <br />
 							    <a href=></a></h2>
-								<p>Cybersecurity student with a passion for technology and a drive to contribute to the protection of digital assets, Currently I am pursuing Certified Ethical Hacker<br />
+								<p> A dedicated cybersecurity enthusiast navigating the digital frontier with a passion for technology and a drive 
+									to contribute to the protection of digital assets.<br />
 							        </p>
 							</header>
 
@@ -88,7 +90,8 @@
 
 							<p class="alt2">Strong problem-solving abilities with a keen eye 
 								for detail. Excellent communication skills and a quick learner, with a passion for staying updated with the 
-								latest industry trends and technologies</p>
+								latest industry trends and technologies.Currently pursuing my studies in cybersecurity where my coursework has equipped 
+								me with a solid foundation in understanding cyber threats and developing effective strategies to mitigate them.</p>
 
 						</div>
 					</section>
