--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="container">
                             <img src="images/Cyber-Security2.jpg" alt="" style="width:100%;">
 							<header>
-							        <h3 class="al">Welcome to My Cybersecurity Corner</h3>
+							        <h3>Welcome to My Cybersecurity Corner</h3>
 								
 								<h2 class="alt">Hi! I'm <strong>Rahul Balu</strong><a href=></a> <br />
 							    <a href=></a></h2>
