--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2 class="alt3">Contact</h2>
 							</header>
 
 							<p></p>
