--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 						<div class="container">
                             <img src="images/Cyber-Security2.jpg" alt="" style="width:100%;">
 							<header>
-							        <h3>Welcome to My Cybersecurity Corner</h3>
+							        <h3 class="at">Welcome to My Cybersecurity Corner</h3>
 								
 								<h2 class="alt">Hi! I'm <strong>Rahul Balu</strong><a href=></a> <br />
 							    <a href=></a></h2>
-								<p> A dedicated cybersecurity enthusiast navigating the digital frontier with a passion for technology and a drive 
+								<p class="alt4"> A dedicated cybersecurity enthusiast navigating the digital frontier with a passion for technology and a drive 
 									to contribute to the protection of digital assets.<br />
 							        </p>
 							</header>
