--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="" alt="" /></span>
+							<span class=""><img src="" alt="" /></span>
 							<h1 id="title">Rahul Balu</h1>
 							<p>Penetration Tester|Ethical Hacker</p>
 						</div>
